# remo-pipeline

./: .gitignore  .prettierrc  README.md  datastar.py  db.py  main.py  parse.py  pyproject.toml  remo.db  tailwind.config.js
app/: main.py  parse.py
app/configs/: book_config.json  configs.py  readme.md
app/database/: book.py  db.py  incomplete.py  sub_genres.py  text_features.py
app/templates/: base.html  books.html  home.html  upload_result.html
models/dtos/: BookDto.py
models/entities/: BookEntity.py
models/mappers/: BookMapper.py
old/: db.py
old/sql/: BOOK.sql
old_sql/: TEXT_FEATURES.sql
sql/: BOOK.sql  INCOMPLETE_BOOK.sql  SUB_GENRES.sql
templates/: home.html  upload_result.html
