[project]
name = "remo-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "humanize>=4.11.0",
    "lxml>=5.3.0",
    "peewee>=3.17.8",
    "pymarc>=5.2.2",
    "sqlmodel>=0.0.22",
    "types-lxml>=2024.11.8",
]
